<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bitcoin Authenticator</string>
    <string name="welcome">An estimated 664,000 BTC have been lost or stolen to date.</string>
    <string name="about">2-Factor Authentication protects your bitcoins even if your wallet is compromised.</string>
    <string name="action_pair_wallet">Pair wallet</string>
    <string name="action_how_it_works">How it works</string>
    <string name="action_show_seed">Show seed</string>
    <string name="action_backup">Backup Wallet</string>
    <string name="action_settings">Settings</string>
    <string name="action_donate_tip">Donate/Tip</string>
    <string name="action_about">About</string>
    <string name="action_test">Test</string>
    <string name="button_see_how_it_works">See how it works</string>
    <string name="button_new_wallet">Pair wallet</string>
    <string name="button_restore_wallet">Restore from seed</string>
    <string name="button_begin_setup">Begin setup</string>
    <string name="title_activity_how_it_works">How it works</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_activity_pending_requests">Pending Requests</string>
    <string name="title_activity_pairing_details">Pairing Details</string>
    <string name="title_activity_paper_wallet">Paper Wallet</string>
    <string name="title_activity_restore_menu">Restore Wallet</string>
    <string name="title_activity_backup_menu">Backup Wallet</string>
    <string name="chooser_title">Select backup file</string>

</resources>
