<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bitcoinauthenticator.androidv01.Main" >

    <item
        android:id="@+id/action_pair_wallet"
        android:showAsAction="never"
        android:title="@string/action_pair_wallet"/>
    <item
        android:id="@+id/action_how_it_works"
        android:showAsAction="never"
        android:title="@string/action_how_it_works"/>
    <item
        android:id="@+id/action_show_seed"
        android:showAsAction="never"
        android:title="@string/action_show_seed"/>
    <item
        android:id="@+id/action_backup"
        android:showAsAction="never"
        android:title="@string/action_backup"/>
     <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
     <item
        android:id="@+id/action_tip_donate"
        android:showAsAction="never"
        android:title="@string/action_donate_tip"/>
     <item
        android:id="@+id/action_about"
        android:showAsAction="never"
        android:title="@string/action_about"/>

</menu>
