<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.bitcoin.authenticator.Welcome"
    tools:ignore="MergeRootFrame" >

 <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="#FFFFFF" 
        android:textStyle="bold"
        android:textSize="20sp"/>

     <TextView
         android:id="@+id/tvAbout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/btnHowItWorks"
         android:layout_below="@+id/tvWelcome"
         android:layout_marginTop="32dp"
         android:text="@string/about"
         android:textColor="#FFFFFF"
         android:textSize="16sp" />

     <Button
         android:id="@+id/btnHowItWorks"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/tvWelcome"
         android:layout_below="@+id/tvAbout"
         android:layout_marginTop="22dp"
         android:text="@string/button_see_how_it_works"
         android:textColor="#FFFFFF" />

     <Button
         android:id="@+id/btnPairWallet"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/btnHowItWorks"
         android:layout_below="@+id/btnHowItWorks"
         android:layout_marginTop="8dp"
         android:text="@string/button_pair_wallet"
         android:textColor="#FFFFFF" />

 </RelativeLayout>
